--- a/distributed-process-registry.cabal
+++ b/distributed-process-registry.cabal
@@ -27,21 +27,21 @@ flag perf
 
 library
   build-depends:
-                   base >= 4.4 && < 5,
+                   base >= 4.14 && < 5,
                    data-accessor >= 0.2.2.3,
-                   distributed-process >= 0.5.3 && < 0.7,
-                   distributed-process-extras >= 0.2.0 && < 0.3,
-                   distributed-process-supervisor >= 0.1.2 && < 0.2,
-                   distributed-process-client-server >= 0.1.2 && < 0.2,
-                   binary >= 0.6.3.0 && < 0.8,
-                   deepseq >= 1.3.0.1 && < 1.5,
-                   mtl,
-                   containers >= 0.4 && < 0.6,
-                   hashable >= 1.2.0.5 && < 1.3,
+                   distributed-process >= 0.6.6 && < 0.8,
+                   distributed-process-extras >= 0.3.1 && < 0.4,
+                   distributed-process-supervisor >= 0.2.0 && < 0.3,
+                   distributed-process-client-server >= 0.2.0 && < 0.3,
+                   binary >= 0.8 && < 0.10,
+                   deepseq >= 1.4 && < 1.7,
+                   mtl >= 2.0 && < 2.4,
+                   containers >= 0.6 && < 0.8,
+                   hashable >= 1.2.0.5 && < 1.6,
                    unordered-containers >= 0.2.3.0 && < 0.3,
                    fingertree < 0.2,
-                   stm >= 2.4 && < 2.5,
-                   time > 1.4 && < 1.6,
+                   stm >= 2.4 && < 2.6,
+                   time >= 1.9,
                    transformers
   if impl(ghc <= 7.5)
     Build-Depends:   template-haskell == 2.7.0.0,
@@ -57,28 +57,28 @@ test-suite RegistryTests
   type:            exitcode-stdio-1.0
 --  x-uses-tf:       true
   build-depends:
-                   base >= 4.4 && < 5,
+                   base >= 4.14 && < 5,
                    ansi-terminal >= 0.5 && < 0.7,
-                   containers,
-                   hashable,
-                   unordered-containers,
-                   distributed-process >= 0.5.3 && < 0.7,
-                   distributed-process-extras >= 0.2.0 && < 0.3,
+                   containers >= 0.6 && < 0.8,
+                   hashable >= 1.2.0.5 && < 1.6,
+                   unordered-containers >= 0.2.3.0 && < 0.3,
+                   distributed-process >= 0.6.6 && < 0.8,
+                   distributed-process-extras >= 0.3.1 && < 0.4,
                    distributed-process-registry,
-                   distributed-process-tests >= 0.4.2 && < 0.5,
+                   distributed-process-tests >= 0.4.4 && < 0.6,
                    distributed-static,
                    bytestring,
-                   data-accessor,
+                   data-accessor >= 0.2.2.3,
                    fingertree < 0.2,
-                   network-transport >= 0.4 && < 0.5,
-                   deepseq >= 1.3.0.1 && < 1.5,
-                   mtl,
-                   network-transport-tcp >= 0.4 && < 0.6,
-                   binary >= 0.6.3.0 && < 0.8,
-                   network >= 2.3 && < 2.7,
+                   network-transport >= 0.4.1.0 && < 0.6,
+                   deepseq >= 1.4 && < 1.7,
+                   mtl >= 2.0 && < 2.4,
+                   network-transport-tcp >= 0.4 && < 0.9,
+                   binary >= 0.8 && < 0.10,
+                   network >= 3.1 && < 3.3,
                    HUnit >= 1.2 && < 2,
-                   stm >= 2.3 && < 2.5,
-                   time > 1.4 && < 1.6,
+                   stm >= 2.4 && < 2.6,
+                   time >= 1.9,
                    test-framework >= 0.6 && < 0.9,
                    test-framework-hunit,
                    transformers,
