--- a/hie.yaml
+++ b/hie.yaml
@@ -3,5 +3,5 @@ cradle:
     - path: "./src"
       component: "distributed-process-registry:lib:distributed-process-registry"
 
-    - path: "./test"
-      component: "distributed-process-registry:test:distributed-process-registry-test"
+    - path: "./tests"
+      component: "distributed-process-registry:test:RegistryTests"
