--- a/distributed-process-registry.cabal
+++ b/distributed-process-registry.cabal
@@ -4,7 +4,6 @@ cabal-version:  >=1.8
 build-type:     Simple
 license:        BSD3
 license-file:   LICENCE
-stability:      experimental
 Copyright:      Tim Watson 2012 - 2015
 Author:         Tim Watson
 Maintainer:     watson.timothy@gmail.com
@@ -14,7 +13,7 @@ Homepage:       http://github.com/haskell-distributed/distributed-process-regist
 Bug-Reports:    http://github.com/haskell-distributed/distributed-process-registry/issues
 synopsis:       Cloud Haskell Extended Process Registry
 description:    This package provides an extended process registry.
-tested-with:    GHC == 7.4.2 GHC == 7.6.2
+tested-with:    GHC == 7.4.2 GHC == 7.6.2 GHC == 9.6.7
 data-dir:       ""
 
 source-repository head
