--- a/distributed-process-registry.cabal
+++ b/distributed-process-registry.cabal
@@ -14,7 +14,6 @@ Bug-Reports:    http://github.com/haskell-distributed/distributed-process-regist
 synopsis:       Cloud Haskell Extended Process Registry
 description:    This package provides an extended process registry.
 tested-with:    GHC == 7.4.2 GHC == 7.6.2 GHC == 9.6.7
-data-dir:       ""
 
 source-repository head
   type:      git
@@ -48,6 +47,8 @@ library
                      uniplate == 1.6.12,
                      ghc-prim
   extensions:      CPP
+  other-modules:
+      Paths_distributed_process_registry
   hs-source-dirs:   src
   ghc-options:      -Wall
   exposed-modules: Control.Distributed.Process.Registry
@@ -84,6 +85,8 @@ test-suite RegistryTests
                    rematch >= 0.2.0.0
   if impl(ghc <= 7.5)
     Build-Depends: ghc-prim
+  other-modules:
+      Paths_distributed_process_registry
   hs-source-dirs:
                    tests
   ghc-options:     -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind -eventlog
